--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,86 @@ Animations
 Navbar
 =================
 */
-
+.navbar {
+  position: sticky;
+  top: 0;
+}
+.nav-header {
+  background: var(--clr-primary-4);
+  height: 5rem;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+  /* max-width: 1170px; */
+}
+.logo-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: calc(100% - 80px);
+  /* flex-wrap: wrap; */
+}
+.nav-logo {
+  color: var(--clr-white);
+  font-size: 2.5rem;
+  text-shadow: 1px 1px 10px var(--clr-grey-1);
+}
+.nav-logo span {
+  color: var(--clr-primary-2);
+}
+.nav-toggle {
+  font-size: 2.5rem;
+  background: transparent;
+  color: var(--clr-primary-2);
+  border: transparent;
+  animation: rotate 3s infinite;
+  cursor: pointer;
+}
+.profile {
+  font-size: 2rem;
+  background: transparent;
+  border: 1px solid white;
+  padding: 0.5rem 0.5rem;
+  color: var(--clr-primary-1);
+  border-radius: 50%;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
+  transition: var(--transition);
+}
+.profile:hover {
+  color: var(--clr-primary-5);
+  background: var(--clr-primary-1);
+  transform: scale(1.05);
+}
+.nav-links {
+  background: var(--clr-primary-4);
+  position: absolute;
+  width: 100%;
+  font-size: 1.2rem;
+  height: 0;
+  overflow: hidden;
+  transition: var(--transition);
+}
+.nav-link {
+  display: block;
+  padding: 1rem 2rem;
+  text-transform: capitalize;
+  letter-spacing: var(--spacing);
+  transition: var(--transition);
+  color: var(--clr-grey-1);
+  cursor: pointer;
+  font-size: 1rem;
+}
+.nav-link:hover {
+  background: var(--clr-primary-2);
+  padding-left: 1.2rem;
+}
+.show-links {
+  height: 200px;
+}
 /* 
 =================
 Hero
@@ -182,6 +261,13 @@ Hero
   color: var(--clr-white);
   border: 2px solid var(--clr-white);
 }
+@media screen and (max-width: 450px) {
+  .nav-toggle,
+  .profile,
+  .nav-logo {
+    font-size: 1.5rem;
+  }
+}
 @media screen and (min-width: 768px) {
   .hero {
     background: linear-gradient(rgb(88, 129, 87, 0.7), rgba(0, 0, 0, 0.7)),
@@ -192,5 +278,13 @@ Hero
   }
   .hero-banner p {
     max-width: 45rem;
+  }
+  .nav-header {
+    background: var(--clr-primary-1);
+  }
+  .nav-toggle,
+  .profile,
+  .nav-logo span {
+    color: var(--clr-primary-4);
   }
 }
