--- a/css/styles.css
+++ b/css/styles.css
@@ -171,13 +171,29 @@ p {
 Navbar
 ===============
 */
+.navbar-fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: var(--clr-white);
+  box-shadow: var(--light-shadow);
+  z-index: 2;
+}
 .nav-links {
   display: none;
 }
 .nav-logo {
-  max-height: 2.5rem;
-  min-height: 2rem;
-  justify-self: flex-start;
+  text-align: center;
+  text-transform: capitalize;
+  justify-items: center;
+  text-shadow: 2px 2px 5px var(--clr-grey-1);
+}
+.nav-logo h3 {
+  font-size: 2rem;
+}
+.nav-logo span {
+  color: var(--clr-primary-5);
 }
 .nav {
   height: 5rem;
@@ -193,8 +209,9 @@ Navbar
 }
 .nav-header {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: auto 1fr;
   align-items: center;
+  justify-items: center;
 }
 .nav-btn {
   background: transparent;
@@ -204,19 +221,109 @@ Navbar
   font-size: 2rem;
   justify-self: end;
 }
+@media screen and (min-width: 768px) {
+  .nav {
+    background-color: var(--clr-primary-8);
+  }
+  .nav-btn {
+    display: none;
+  }
+
+  .nav-links {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+    align-items: center;
+    column-gap: 2rem;
+  }
+  .nav-links a {
+    text-transform: capitalize;
+    color: var(--clr-grey-1);
+    font-weight: bold;
+    letter-spacing: var(--spacing);
+    transition: var(--transition);
+  }
+  .nav-links a:hover {
+    color: var(--clr-primary-5);
+  }
+  .nav-center {
+    display: grid;
+    grid-template-columns: auto 1fr;
+  }
+}
 /*
 =============== 
 Sidebar
 ===============
 */
-
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: var(--clr-grey-10);
+  z-index: 2;
+  display: grid;
+  /* align-items: center;
+  justify-content: center; */
+  place-items: center;
+  transition: var(--transition);
+  transform: translateX(-100%);
+}
+.close-btn {
+  color: #bb2525;
+  background: transparent;
+  border: transparent;
+  font-size: 3rem;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+}
+.close-btn:hover {
+  color: #e66b6b;
+}
+.sidebar-links {
+  text-align: center;
+}
+.sidebar-links a {
+  font-size: 2rem;
+  text-transform: capitalize;
+  transition: var(--transition);
+  color: var(--clr-grey-5);
+  display: inline-block;
+  letter-spacing: var(--spacing);
+  margin-bottom: 1.5rem;
+}
+.sidebar-links a:hover {
+  color: var(--clr-primary-5);
+}
+.social-icons {
+  display: grid;
+  margin-top: 3rem;
+  grid-template-columns: repeat(5, 1fr);
+  width: 20rem;
+  justify-items: center;
+}
+.social-icon {
+  font-size: 1.5rem;
+  color: var(--clr-grey-1);
+  transition: var(--transition);
+}
+.social-icon:hover {
+  color: var(--clr-primary-5);
+}
+.show-sidebar {
+  transform: translate(0);
+}
 /*
 =============== 
 Hero
 ===============
 */
 /* underline added to globals */
-
+.hero {
+}
 /*
 =============== 
 About
