--- a/css/styles.css
+++ b/css/styles.css
@@ -165,7 +165,18 @@ p {
   }
 }
 /* added during recording */
-
+.underline {
+  width: 5rem;
+  height: 0.25rem;
+  margin-bottom: 1.25rem;
+  background: var(--clr-primary-5);
+  margin-left: auto;
+  margin-right: auto;
+}
+.section-title {
+  margin-bottom: 4rem;
+  text-align: center;
+}
 /*
 =============== 
 Navbar
@@ -322,15 +333,112 @@ Hero
 ===============
 */
 /* underline added to globals */
-/* .hero {
-} */
+.hero .underline {
+  margin-bottom: 0.5rem;
+  margin-left: 0;
+}
+.hero-img {
+  display: none;
+}
+.hero {
+  background: var(--clr-primary-8);
+}
+.hero-center {
+  min-height: calc(100vh - 5rem);
+  display: grid;
+  padding-top: 1rem;
+  place-items: center;
+  padding-bottom: 1rem;
+}
+.hero-info h4 {
+  color: var(--clr-grey-5);
+  line-height: 2;
+}
+.hero-icons {
+  display: grid;
+  grid-template-columns: 1fr;
+  font-size: 1.5rem;
+}
+.hero-icons li {
+  padding-bottom: 1rem;
+  color: var(--clr-grey-1);
+}
+.hero-photo {
+  max-height: 30rem;
+  max-width: 25rem;
+  object-fit: cover;
+  border-radius: var(--radius);
+  position: relative;
+}
+.hero-btn {
+  margin: 1rem 2rem 2rem 0;
+}
+@media screen and (min-width: 992px) {
+  .hero-img {
+    display: block;
+    position: relative;
+  }
+  .hero-center {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .hero-img::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border: 0.25rem solid var(--clr-primary-5);
+    top: 1.5rem;
+    left: 1.5rem;
+    border-radius: var(--radius);
+  }
+}
 /*
 =============== 
 About
 ===============
 */
 /* section title added to globals */
-
+.about-title {
+  text-align: left;
+  margin-bottom: 2rem;
+}
+.about-title .underline {
+  margin-left: 0;
+}
+.about-center {
+  display: grid;
+  gap: 3rem 2rem;
+}
+.about-img {
+  justify-self: center;
+}
+.about-info p {
+  text-align: justify;
+}
+@media screen and (min-width: 968px) {
+  .about-center {
+    grid-template-columns: 1fr 1fr;
+  }
+  .about-info {
+    align-self: center;
+  }
+  .about-img {
+    position: relative;
+    max-height: 30rem;
+    max-width: 25rem;
+  }
+  .about-img::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border: 0.25rem solid var(--clr-primary-5);
+    top: 1.5rem;
+    right: 1.5rem;
+    border-radius: var(--radius);
+  }
+}
 /*
 =============== 
 Services
