--- a/css/styles.css
+++ b/css/styles.css
@@ -649,26 +649,172 @@ Connect
 }
 /*
 =============== 
-Skills
+Ratings
 ===============
 */
+@media screen and (min-width: 768px) {
+  .ratings-center {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 2rem;
+  }
+}
+.ratings {
+  background: var(--clr-primary-9);
+}
+.ratings h3 {
+  margin-bottom: 1.5rem 0;
+  color: var(--clr-primary-1);
+}
 /*
 =============== 
-Timeline
+Pathway
 ===============
 */
-
+.pathway-center {
+  width: 80vw;
+  max-width: 40rem;
+}
+.pathway-item {
+  border-top: 2px dotted var(--clr-primary-5);
+  margin: 0;
+  padding: 4rem 2rem;
+  position: relative;
+}
+.pathway-item:nth-child(even) {
+  border-left: 2px dotted var(--clr-primary-5);
+  border-top-left-radius: 2rem;
+  border-bottom-left-radius: 2rem;
+  margin-right: 2rem;
+  padding-right: 0;
+}
+.pathway-item:nth-child(odd) {
+  border-right: 2px dotted var(--clr-primary-5);
+  border-top-right-radius: 2rem;
+  border-bottom-right-radius: 2rem;
+  margin-left: 2rem;
+  padding-left: 0;
+}
+.pathway-item:first-child {
+  border-top: 0;
+  border-top-right-radius: 0;
+}
+.pathway-item:last-child {
+  border-bottom-right-radius: 0;
+}
+.number {
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  margin-bottom: 0;
+  height: 2rem;
+  width: 2rem;
+  display: grid;
+  place-items: center;
+  background: var(--clr-primary-5);
+  border-radius: 50%;
+  color: var(--clr-primary-1);
+  font-weight: bold;
+}
+.pathway-item:nth-child(even) .number {
+  left: 0;
+}
+.pathway-item:nth-child(odd) .number {
+  left: 100%;
+}
 /*
 =============== 
 Blog
 ===============
 */
-
+.blog {
+  background: var(--clr-grey-10);
+}
+.card {
+  height: 27rem;
+  position: relative;
+  perspective: 1500px;
+}
+.card-side {
+  backface-visibility: hidden;
+  transition: all 2s linear;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: var(--radius);
+}
+.card-front {
+  background: var(--clr-white);
+}
+.card-back {
+  background: var(--clr-primary-10);
+  transform: rotateY(180deg);
+  display: grid;
+  place-items: center;
+}
+.card:hover .card-front {
+  transform: rotateY(-180deg);
+}
+.card:hover .card-back {
+  transform: rotateY(0deg);
+}
+.card-info {
+  padding: 1rem 1.5rem;
+}
+.card-front img {
+  height: 13rem;
+  object-fit: cover;
+  border-top-left-radius: var(--radius);
+  border-top-right-radius: var(--radius);
+}
+.card-footer {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+}
+.card-footer img {
+  height: 2rem;
+  width: 2rem;
+  object-fit: cover;
+  border-radius: 50%;
+}
+.card-footer p {
+  color: var(--clr-primary-5);
+  justify-self: end;
+  font-size: 0.85rem;
+  text-transform: uppercase;
+}
+.blog-center {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
+  gap: 3rem 1rem;
+}
 /*
 =============== 
 Footer
 ===============
 */
+.footer {
+  padding-bottom: 2rem;
+  background: #222;
+  display: grid;
+  place-items: center;
+}
+.footer .social-icons {
+  margin-bottom: 2rem;
+}
+.footer .social-icon {
+  color: var(--clr-primary-5);
+}
+.footer .social-icon:hover {
+  color: var(--clr-primary-10);
+}
+.footer p {
+  font-size: 1.25rem;
+  text-transform: capitalize;
+}
 /*
 =============== 
 Single Page
